appId: com.daimo
---
- tapOn: "Home, tab, 3 of 5"
- tapOn: " Send"
- inputText: "0x2A6d311394184EeB6Df8FBBF58626B085374Ffe7"
- hideKeyboard
- tapOn: " team daimo"
- inputText: ${AMOUNT}
- hideKeyboard
- tapOn: Confirm
- longPressOn: Hold to send
